REDO - Determining the desired PLAB size adjusts to the the number of threads at the wrong place

XMLWordPrintable

    • gc
    • b74

        When calculating the size of the next PLAB we pass along the current number of gc workers, calculating an "optimal" PLAB size for that number of gc workers, that is fed directly to the desired PLAB size predictor.

        When the number of workers changes dynamically (with -XX:+UseDynamicNumberOfGCThreads), the desired PLAB size value returned is still tuned to the number of threads that has been used previously, losing performance.

        A better solution would be to feed the PLAB size predictor the value for a single thread, and calculate the actual desired size according to the current number of threads instead.

          There are no Sub-Tasks for this issue.

              Assignee:
              Sangheon Kim (Inactive)
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: